# zen-serialization

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  basics.cpp  containers.cpp  person.cpp  simple.cpp  smart_pointer.cpp
example/scene/: Base.cpp  Base.h  CMakeLists.txt  Derived.cpp  Derived.h  README.md  base_node.cpp  base_node.h  derived_node.cpp  derived_node.h  main.cpp  scene.cpp
src/: CMakeLists.txt  archive.cpp
src/zen_serialization/: aggregate.h  archive.h  archive_base.h  base64.h  binary_serializer.h  json_serializer.h  range_size.h  serializer.h
test/: CMakeLists.txt  test_aggregate.cpp  test_associative.cpp  test_basic_types.cpp  test_complex.cpp  test_containers.cpp  test_custom_class.cpp  test_cycle_reference.cpp  test_enum.cpp  test_expected.cpp  test_filesystem_path.cpp  test_inheritance.cpp  test_nested_containers.cpp  test_optional.cpp  test_polymorphic_with_registration.cpp  test_polymorphic_without_registration.cpp  test_priority_queue.cpp  test_smart_pointers.cpp  test_string.cpp  test_struct.cpp  test_unordered_associative.cpp
